2004-07-14  Jeff Martin  <jeff@custommonkey.org>

	* popup.c

	Added icons for comment/uncomment

2004-07-13  Jeff Martin  <jeff@custommonkey.org>

	* tree.c, popup.c

	Added implementation of "Other Elements" menu

2004-07-12  David Malcolm  <dmalcolm@redhat.com>

	* cong-editor-area-unknown-tag.c, cong-editor-area-unknown-tag.h, cong-editor-node-element-unknown.c:

	Add attribute and namespace information to the unknown element display in main editing widget.

2004-07-07  Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* main.c, cong-app.c : Use popt context to parse command
	line options and open them all in conglomerate, converting
	them to uri.

2004-07-06  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-dispspec-element-gxx.h, cong-dispspec-element.c, cong-dispspec-element.h, cong-document.c, cong-util.c, cong-util.h, gxx-declare-object-from-xml-tree.h, gxx-declare-object-to-xml-tree.h, gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h, gxx-undefine-shared-macros.h

	Added a spellcheck attribute to dispspec elements; implemented the previously-stubbed function cong_document_should_spellcheck_node to use this

2004-07-05  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-node-text.c: 

	Call the various new functions to spellcheck appropriately (when they are fully implemented)

	* cong-util.c, cong-util.h:

	Added function cong_util_spellcheck_word

	* cong-document.c, cong-document.h: 

	Added function cong_document_should_spellcheck_node

	* cong-editor-node-text.c: 

	Start of spell-checking support

	* cong-document.c, cong-document.h, cong-location.c: 

	Converted make_pango_log_attr_for_node from a static fucntion into the global cong_document_make_pango_log_attr_for_node

	* cong-util.h, cong-util.c:

	Added routines to get a list of all words in a string, and to convert from characters in a UTF-8 string to byte offsets; fixed bugs in CongElementDescription manipulation code 

	* cong-util.c (make_element_description_list_callback): 