@@ -95,7 +95,7 @@ CongDocument*
 cong_editor_widget3_get_document(CongEditorWidget3 *editor_widget);
 
 CongDispspec*
-cong_editor_widget3_get_dispspec(CongEditorWidget3 *editor_widget);
+cong_editor_widget3_get_default_dispspec(CongEditorWidget3 *editor_widget);
 
 void 
 cong_editor_widget3_force_layout_update (CongEditorWidget3 *editor_widget);
